feat: add integration test