@@ -1,14 +1,12 @@
-package com.ascend.testlab.dao.impl;
+package com.ascend.testlab.dao;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 import com.ascend.testlab.client.postgresql.PgReaderClient;
 import com.ascend.testlab.constants.postgresql.ReadQuery;
+import com.ascend.testlab.dao.impl.TagsDAOImpl;
 import io.reactivex.rxjava3.core.Single;
-import io.vertx.rxjava3.sqlclient.Row;
-import io.vertx.rxjava3.sqlclient.RowSet;
 import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
@@ -18,17 +16,11 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
-class TagsDAOImplTest {
+class TagsDAOTest {
 
   @Mock private PgReaderClient pgReaderClient;
 
-  @Mock private RowSet<Row> rowSet;
-
-  @Mock private Row row1;
-
-  @Mock private Row row2;
-
-  private TagsDAOImpl tagsDAO;
+  private TagsDAO tagsDAO;
 
   private final String testProjectKey = "123e4567-e89b-12d3-a456-426614174000";
 
@@ -59,7 +51,7 @@ class TagsDAOImplTest {
   void testFetchTags_EmptyResult() {
     // Given
     when(pgReaderClient.fetchAll(eq(ReadQuery.FETCH_TAGS), any(), any()))
-        .thenReturn(Single.just(Arrays.asList()));
+        .thenReturn(Single.just(List.of()));
 
     // When
     Single<List<String>> result = tagsDAO.fetchTags(testProjectKey);
